--- a/src/main/resources/templates/quotaAnnuale/quotaAnnualeList.html
+++ b/src/main/resources/templates/quotaAnnuale/quotaAnnualeList.html
@@ -140,6 +140,7 @@
 									  $(this).parent().parent().parent().removeClass('selected');
 								  }
 							});
+							initSelectAll();
 					    }
 					});
 					
@@ -162,6 +163,7 @@
 									  $(this).parent().parent().parent().removeClass('selected');
 								  }
 							});
+							initSelectAll();
 					    }
 					});
 
