--- a/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
@@ -57,11 +57,12 @@
 														<a th:text="#{label.aggiungi_evento}" class="btn btn-primary with-margin-top" th:href="@{|/provider/${pianoFormativo.provider.id}/pianoFormativo/${pianoFormativo.id}/evento/new|}"></a>
 														<!-- <a th:text="#{label.elimina_tutti_eventi_da_pfa}" class="btn btn-danger with-margin-top" th:href="@{|/provider/${pianoFormativo.provider.id}/pianoFormativo/${pianoFormativo.id}/evento/deleteAll|}"></a> -->
 
-														<button class="btn btn-danger with-margin-top" th:onclick="|confirmDeleteAllEventiPianoFormativoModal('${pianoFormativo.provider.id}','${pianoFormativo.id}')|"><i class="fa fa-trash"></i><span th:text="#{label.elimina_tutti_eventi_da_pfa}"> </span></button>
-
+														<button class="btn btn-danger with-margin-top" th:onclick="|confirmDeleteAllEventiPianoFormativoModal('${pianoFormativo.provider.id}','${pianoFormativo.id}',false)|"><i class="fa fa-trash"></i><span th:text="#{label.elimina_tutti_eventi_da_pfa}"> </span></button>
+														<button class="btn btn-danger with-margin-top" th:onclick="|confirmDeleteAllEventiPianoFormativoModal('${pianoFormativo.provider.id}','${pianoFormativo.id}',true)|"><i class="fa fa-trash"></i><span th:text="#{label.elimina_tutti_eventi_da_pfa_from_csv}"> </span></button>				
 														<div class="divider"></div>
 
-														<th:block th:if="${#lists.isEmpty(pianoFormativo.eventiPianoFormativo)}">
+														<!-- th:block th:if="${#lists.isEmpty(pianoFormativo.eventiPianoFormativo)}" -->
+														<th:block>
 															<!-- importazione eventi piano formativo -->
 															<form class="form-horizontal form-label-left" th:action="@{|/provider/${pianoFormativo.provider.id}/pianoFormativo/${pianoFormativo.id}/importaEventiDaCSV|}"
 																	method="post" enctype="multipart/form-data" novalidate="novalidate">
@@ -97,7 +98,7 @@
 						<div class="modal-dialog modal-lg">
 							<div class="modal-content">
 								<div class="modal-header">
-									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">Ã—</span>
 									</button>
 									<h4 class="modal-title" id="myModalLabel" th:text="#{label.seleziona_anno}">Seleziona anno</h4>
 								</div>
@@ -119,7 +120,7 @@
 						<div class="modal-dialog modal-lg">
 							<div class="modal-content">
 								<div class="modal-header">
-									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+									<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">Ã—</span>
 									</button>
 									<h4 class="modal-title" id="myModalLabel" th:text="#{label.visualizza_evento_modal}">Visualizza evento</h4>
 								</div>
